@@ -3,6 +3,8 @@ package org.kd;
 import com.codeborne.selenide.SelenideElement;
 import org.openqa.selenium.By;
 
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -13,18 +15,17 @@ public class SeleniumEasyTest {
     public static final String SELENIUM_EASY = "https://www.seleniumeasy.com/test";
 
     public static void main(String[] args) {
-        var test = new SeleniumEasyTest();
+        SeleniumEasyTest test = new SeleniumEasyTest();
         test.testDualListBox();
     }
 
     private void testDualListBox() {
         open(SELENIUM_EASY + "/bootstrap-dual-list-box-demo.html");
 
-        var testDataMap = Map.of(
-                "d", List.of("bootstrap-duallist", "Dapibus ac facilisis in")
-                , "ac ", List.of("Dapibus ac facilisis in", "Porta ac consectetur ac")
-                , "us ", List.of("Dapibus ac facilisis in", "Morbi leo risus")
-        );
+        Map<String, List<String>> testDataMap = new HashMap<>();
+        testDataMap.put("d", Arrays.asList("bootstrap-duallist", "Dapibus ac facilisis in"));
+        testDataMap.put("ac ", Arrays.asList("Dapibus ac facilisis in", "Porta ac consectetur ac"));
+        testDataMap.put("us ", Arrays.asList("Dapibus ac facilisis in", "Morbi leo risus"));
 
         testDataMap.forEach(
                 (entry, values) -> {
@@ -39,7 +40,7 @@ public class SeleniumEasyTest {
     }
 
     private void typeInSearchDualList(String entry) {
-        var searchDualList = $(By.name("SearchDualList"));
+        SelenideElement searchDualList = $(By.name("SearchDualList"));
         searchDualList.clear();
         searchDualList.sendKeys(entry);
         searchDualList.pressEnter();
